temp_files/tmp_1628325096.2.Compile_error
./temp_files/tmp_1628325096.2.cpp: In function ‘void Test1()’:
./temp_files/tmp_1628325096.2.cpp:20:6: error: ‘ret’ was not declared in this scope
   if(ret){
      ^~~
./temp_files/tmp_1628325096.2.cpp:20:6: note: suggested alternative: ‘re’
   if(ret){
      ^~~
      re
./temp_files/tmp_1628325096.2.cpp: At global scope:
./temp_files/tmp_1628325096.2.cpp:28:6: error: redefinition of ‘void Test1()’
 void Test1(){
      ^~~~~
./temp_files/tmp_1628325096.2.cpp:17:6: note: ‘void Test1()’ previously defined here
 void Test1(){
      ^~~~~
./temp_files/tmp_1628325096.2.cpp: In function ‘void Test1()’:
./temp_files/tmp_1628325096.2.cpp:31:7: error: ‘ret’ was not declared in this scope
   if(!ret){
       ^~~
./temp_files/tmp_1628325096.2.cpp:31:7: note: suggested alternative: ‘re’
   if(!ret){
       ^~~
       re
